fix agent welcome sca render function, wz-menu when agent is selected: replaced unselect agent by pinFilled Eui icon, added agent name to agent summary tooltip, fixed dark mode

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1421,3 +1421,7 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom.wz-menu
   -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
 }
+
+.wz-menu-agent-info {
+  background-color: rgb(245, 247, 250);
+}
