--- a/public/less/dark_theme/wz_theme_dark.css
+++ b/public/less/dark_theme/wz_theme_dark.css
@@ -419,3 +419,7 @@ svg .legend text {
 .wz-agents-mitre .euiFlexGroup--directionRow {
   overflow: hidden;
 }
+
+.wz-menu-agent-info {
+  background-color: #1a1b20;
+}
